# ens-north-wind

./: data.json  get-prediction.py  north.html  pyproject.toml
.github/workflows/: test.yml
docs/: data.json  index.html
