[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ens-north-wind"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "openmeteo-requests",
    "requests-cache",
    "retry-requests",
    "numpy",
    "pandas"
]

[project.urls]
homepage = "https://github.com/fredt34/ens-north-wind"
repository = "https://github.com/fredt34/ens-north-wind"